--- a/charts/kube-bench-metrics/templates/deployment.yaml
+++ b/charts/kube-bench-metrics/templates/deployment.yaml
@@ -5,7 +5,6 @@ metadata:
   labels:
 {{ include "kube-metrics-wrapper.labels" . | indent 4 }}
 spec:
-  replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
       app.kubernetes.io/name: {{ include "kube-metrics-wrapper.name" . }}
@@ -25,8 +24,8 @@ spec:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           args:
-          - --versionOverride
-          - {{ .Values.versionOverride }}
+          - "--versionOverride"
+          - {{ .Values.versionOverride | quote}}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
