Updated deployment, rbac operator and k8s service monitor

--- a/charts/kube-bench-metrics/templates/servicemonitor.yaml
+++ b/charts/kube-bench-metrics/templates/servicemonitor.yaml
@@ -4,6 +4,7 @@ kind: ServiceMonitor
 metadata:
   labels:
     app: {{ include "kube-metrics-wrapper.name" . }}
+    release: prometheus-operator
   name: {{ include "kube-metrics-wrapper.name" . }}-monitoring
   namespace: {{ .Values.prometheus.namespace }}
 spec:
