--- a/charts/kube-bench-metrics/templates/deployment.yaml
+++ b/charts/kube-bench-metrics/templates/deployment.yaml
@@ -20,6 +20,7 @@ spec:
         {{- toYaml . | nindent 8 }}
     {{- end }}
       hostPID: true
+      serviceAccountName: kube-bench-metrics
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
