--- a/charts/kube-bench-metrics/templates/rbac.yaml
+++ b/charts/kube-bench-metrics/templates/rbac.yaml
@@ -1,4 +1,9 @@
-
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: kube-bench-metrics
+automountServiceAccountToken: true
+---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
@@ -14,7 +19,7 @@ metadata:
   name: kube-bench-metrics-role-binding
 subjects:
 - kind: ServiceAccount
-  name: default
+  name: kube-bench-metrics
   namespace: {{ .Release.Namespace }}
 roleRef:
   kind: ClusterRole 
