--- a/charts/kube-bench-metrics/templates/servicemonitor.yaml
+++ b/charts/kube-bench-metrics/templates/servicemonitor.yaml
@@ -1,4 +1,4 @@
-{{ if and .Values.prometheus.enabled  .Values.prometheus.namespace}}
+{{ if .Values.prometheus.enabled  }}
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
@@ -6,9 +6,9 @@ metadata:
     app: {{ include "kube-metrics-wrapper.name" . }}
     release: prometheus-operator
   name: {{ include "kube-metrics-wrapper.name" . }}-monitoring
-  {{ if .Values.prometheus.namespace }}
+  {{- if .Values.prometheus.namespace }}
   namespace: {{ .Values.prometheus.namespace }}
-  {{ end }}
+  {{- end }}
 spec:
   endpoints:
   - port: http
