--- a/charts/kube-bench-metrics/templates/daemonset.yaml
+++ b/charts/kube-bench-metrics/templates/daemonset.yaml
@@ -29,6 +29,10 @@ spec:
           - {{ .Values.versionOverride | quote}}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           volumeMounts:
+            {{- if and ( not .Values.kubeadmVolumes.enabled ) ( not .Values.extraVolumeMounts ) }}
+            []
+            {{- end }}
+            {{- if .Values.kubeadmVolumes.enabled }}
             - name: var-lib-etcd
               mountPath: /var/lib/etcd
               readOnly: true
@@ -46,6 +50,10 @@ spec:
             - name: usr-bin
               mountPath: /usr/local/mount-from-host/bin
               readOnly: true
+            {{- end }}
+            {{- if .Values.extraVolumeMounts }}
+            {{- toYaml .Values.extraVolumeMounts | nindent 12 }}
+            {{- end }}
           ports:
             - name: http
               containerPort: 8000
@@ -67,6 +75,10 @@ spec:
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       volumes:
+        {{- if and ( not .Values.kubeadmVolumes.enabled ) ( not .Values.extraVolumes ) }}
+        []
+        {{- end }}
+        {{- if .Values.kubeadmVolumes.enabled }}
         - name: var-lib-etcd
           hostPath:
             path: "/var/lib/etcd"
@@ -82,6 +94,10 @@ spec:
         - name: usr-bin
           hostPath:
             path: "/usr/bin"
+        {{- end }}
+        {{- if .Values.extraVolumes }}
+        {{- toYaml .Values.extraVolumes | nindent 8 }}
+        {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
