--- a/charts/kube-bench-metrics/templates/rbac.yaml
+++ b/charts/kube-bench-metrics/templates/rbac.yaml
@@ -25,17 +25,46 @@ roleRef:
   kind: ClusterRole 
   name: {{ include "kube-metrics-wrapper.name" . }}-cluster
   apiGroup: rbac.authorization.k8s.io
+{{ if .Values.psp.enabled }}
+---
+apiVersion: policy/v1beta1
+kind: PodSecurityPolicy
+metadata:
+  name: kube-bench-metrics
+spec:
+  allowPrivilegeEscalation: false
+  fsGroup:
+    rule: RunAsAny
+  hostPID: true
+  requiredDropCapabilities:
+  - ALL
+  runAsGroup:
+    rule: RunAsAny
+  runAsUser:
+    rule: RunAsAny
+  seLinux:
+    rule: RunAsAny
+  supplementalGroups:
+    rule: RunAsAny
+  volumes:
+  - configMap
+  - emptyDir
+  - projected
+  - secret
+  - downwardAPI
+  - hostPath
+  - persistentVolumeClaim
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: kube-bench-metrics-priviliged
+  name: kube-bench-metrics-psp
   namespace: {{ .Release.Namespace }}
 rules:
 - apiGroups:
   - extensions
   resourceNames:
-  - privileged
+  - kube-bench-metrics
   resources:
   - podsecuritypolicies
   verbs:
@@ -44,12 +73,13 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: kube-bench-metrics-priviliged
+  name: kube-bench-metrics-psp
 subjects:
 - kind: ServiceAccount
   name: kube-bench-metrics
   namespace: {{ .Release.Namespace }}
 roleRef:
   kind: Role 
-  name: kube-bench-metrics-priviliged
+  name: kube-bench-metrics-psp
   apiGroup: rbac.authorization.k8s.io
+{{ end }}
