--- a/charts/kube-bench-metrics/templates/servicemonitor.yaml
+++ b/charts/kube-bench-metrics/templates/servicemonitor.yaml
@@ -1,12 +1,12 @@
+{{ if .Values.serviceMonitor.enabled }}
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   labels:
     app: {{ include "kube-metrics-wrapper.name" . }}
-    release: prometheus-operator
   name: {{ include "kube-metrics-wrapper.name" . }}-monitoring
-  {{- if .Values.prometheus.namespace }}
-  namespace: {{ .Values.prometheus.namespace }}
+  {{- if .Values.serviceMonitor.namespace }}
+  namespace: {{ .Values.serviceMonitor.namespace }}
   {{- end }}
 spec:
   endpoints:
@@ -18,3 +18,4 @@ spec:
   selector:
     matchLabels:
       app.kubernetes.io/name: {{ include "kube-metrics-wrapper.name" . }}
+{{ end }}
